Fixed page header alignment

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -642,7 +642,7 @@ h1 {
 }
 
 .page-title {
-	margin-left: 123px;
+	margin-left: 163px;
 }
 
 .filter {
